--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="total">
     <section class="header">
       <div class="head">
-        <a href="../index.html" class="imag_logo">
+        <a href="#" class="imag_logo">
           <img src="images/logo.svg" alt="" width="90px">
         </a>
         <form class="" action="index.html" method="post">
